# purplelens

./: .env.example  .gitignore  Backend_specification_auth_rbac_v2.md  LICENSE  Makefile  README.fr.md  README.md  STYLE.md  cahier_des_charges_v2.md  dat_v1.1.md  docker-compose.override.yml  docker-compose.yml  maquette.html
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: config.py  import_maquette.py  main.py  seed.py  seed_demo.py  startup.py
backend/app/api/: deps.py  engagement_defaults.py  registry.py  service.py
backend/app/core/: config.py  database.py
backend/app/data/: corpus.json
backend/app/db/: session.py
backend/app/deliverables/: service.py  stix.py
backend/app/journal/: anchor.py  chain.py
backend/app/models/: __init__.py  base.py  business.py  d3fend.py  enums.py  evidence.py  mitre_catalog.py  models.py  referentials.py  security.py
backend/app/reference/: attack_d3fend.py  catalogs.py  sync.py
backend/app/routers/: applications.py  audits.py  cti.py  dashboard.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: sync_reference.py  verify_journal.py
backend/sql/: 00-roles.sh  schema_evidence.sql
backend/tests/: conftest.py  test_attack_matrix.py  test_audit_actions.py  test_audit_links.py  test_audit_naming.py  test_circl_enrichment.py  test_cockpit.py  test_code_fallback.py  test_crypto.py  test_e2e_features.py  test_e2e_http.py  test_engagement_defaults.py  test_exercise_steps.py  test_ingest_detection.py  test_journal_anchor.py  test_journal_chain.py  test_matrix.py  test_network_exposure.py  test_oidc_state.py  test_organisations_analytics.py  test_profile_resource.py  test_rbac_gates.py  test_reference_catalogs.py  test_reference_sync.py  test_ressources_analytics.py  test_rls_isolation.py  test_secret_box.py  test_security_hardening_p0.py  test_service_coercion.py  test_stix_export.py  test_stix_import.py  test_tokens.py  test_totp_ratelimit.py  test_vuln_enrichment.py  test_worm_bucket.py
(+173 files in other folders)
